<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="50dp"
    android:paddingHorizontal="20dp"
    android:orientation="vertical">

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.4"></Space>

    <ImageView
        android:id="@+id/logoTomorrowApp"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:src="@drawable/logo_tomorrowapp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/formLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center">

        <EditText
            android:id="@+id/txtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Login" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNoAccountYet"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/Register_Prompt" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_marginHorizontal="90dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register" />
    </LinearLayout>


</LinearLayout>