<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackPearl"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/panelHomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_exit_to_app_30"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="5dp"
                android:background="@color/transparent"/>

<!--            <Button-->
<!--                android:id="@+id/btnLogout"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:backgroundTint="@color/blue_500"-->
<!--                android:text="Logout"-->
<!--                android:textColor="@color/white"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvHomeGreeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/placeholderGreeting"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHomeEstablishment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"

                android:text="@string/placeholderEstablishment"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHomeLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"

                android:text="@string/placeholderLocation"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHomePhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"

                android:text="@string/placeholderNumber"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

<!--        <Space-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp" />-->
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:elevation="10dp"
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/panelHomeHeader"
        app:tabBackground="@color/ebonyClay"
        app:tabGravity="fill"
        app:tabInlineLabel="true"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/macawBlueGreen"
        app:tabTextColor="@color/blackPearl">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/panelHomeButtons"
        app:layout_constraintTop_toBottomOf="@+id/tabs">


    </androidx.viewpager.widget.ViewPager>


    <LinearLayout
        android:elevation="50dp"
        android:id="@+id/panelHomeButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="@color/ebonyClay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager">

        <Button
            android:id="@+id/btnSendToAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/secondary"
            android:backgroundTint="@color/blue_500"
            android:text="Send"
            android:textColor="@color/white" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddRecipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_vaccine_recipient"
            app:srcCompat="@drawable/ic_baseline_person_add_alt_1_24"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>